<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>java-20</artifactId>

	<parent>
		<groupId>cn.tuyucheng.taketoday.java-core-modules</groupId>
		<artifactId>java-core-modules</artifactId>
		<version>1.0.0</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.24.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.toolchains.version}</version>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>--add-modules=jdk.incubator.concurrent</arg>
						<arg>--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED</arg>
					</compilerArgs>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M8</version>
				<configuration>
					<argLine>${argLine} --enable-preview
						--add-modules=jdk.incubator.concurrent
						--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
					</argLine>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<properties>
		<java.toolchains.version>20</java.toolchains.version>
		<maven-toolchains-plugin-version>3.1.0</maven-toolchains-plugin-version>
		<maven.compiler.source>20</maven.compiler.source>
		<maven.compiler.target>20</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>